--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,9 @@ fieldLabel.JoinDate = JoinDate
 fieldLabel.leaveType = Leave Type Name
 fieldLabel.leavePeriod = Leave Period
 fieldLabel.description = Description
+fieldLabel.localName = LocalName
+fieldLabel.holidayName = Name
+fieldLabel.holidayDate = Holiday Date
 
 
 
@@ -25,4 +28,5 @@ caption.delete = Delete
 menu.admin.leavetypelist = Manage LeaveType
 menu.admin.emplist = Manage Employee
 menu.admin.ulist = Manage User
+menu.admin.publist = Manage Public Holidays
 
