--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,8 +2,8 @@ fieldLabel.password       = Password
 fieldLabel.username       = Username
 
 
-error.user.username.empty               = The "username" field cannot be empty.
-error.user.password.empty             = The "Password" field cannot be empty.
+error.user.username.empty               = Please enter your username
+error.user.password.empty             = Please enter your password
 
 fieldLabel.employeeName = Employee Name
 fieldLabel.managerId = Manager Id
