"addedCSS,pendingValidator, andeverythingelse"

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,13 +9,13 @@ fieldLabel.employeeName = Employee Name
 fieldLabel.managerId = Manager Id
 fieldLabel.status = Status
 fieldLabel.userId = UserId
-fieldLabel.username = UserName
+fieldLabel.username = Username
 fieldLabel.password = Password
-fieldLabel.JoinDate = JoinDate
+fieldLabel.JoinDate = Join Date
 fieldLabel.leaveType = Leave Type Name
 fieldLabel.leavePeriod = Leave Period
 fieldLabel.description = Description
-fieldLabel.localName = LocalName
+fieldLabel.localName = Local Name
 fieldLabel.holidayName = Name
 fieldLabel.holidayDate = Holiday Date
 
@@ -25,7 +25,7 @@ caption.edit = Edit
 caption.delete = Delete
 
 
-menu.admin.leavetypelist = Manage LeaveType
+menu.admin.leavetypelist = Manage Leave Type
 menu.admin.emplist = Manage Employee
 menu.admin.ulist = Manage User
 menu.admin.publist = Manage Public Holidays
