at 22 dec 7.36pm

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,10 @@ fieldLabel.username       = Username
 
 error.user.username.empty               = Please enter your username
 error.user.password.empty             = Please enter your password
+error.user.roles.empty = Please select at least 1 role
+
+fieldLabel.employeeId = Employee Id
+fieldLabel.userRole = User Roles
 
 fieldLabel.employeeName = Employee Name
 fieldLabel.managerId = Manager Id
